# scripts

./: .buildinfo  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIG_MIGRATION.md  LICENSE  Pipfile  README.md  TODO.md  config_adapter.html  genindex.html  index.html  mise.toml  mypy.ini  objects.inv  pyproject-release.toml  pyproject.toml  ruff.toml  search.html  searchindex.js  slugren
src/bim/: Makefile  README.md  config.yaml  pyproject.toml
src/bim/bim/: __main__.py  cli.py  settings.py
src/bim/bim/commands/: __init__.py
src/bim/bim/commands/format_note/: format_note.py
src/bim/bim/commands/import_note/: import_note.py
src/bim/bim/commands/parse_tags/: parse_tags.py
src/bim/bim/commands/sync_note/: sync_note.py
src/buvis/: pyproject.toml  setup.py
src/buvis/adapters/: __init__.py  response.py
src/buvis/adapters/config/: config.py
src/buvis/adapters/poetry/: poetry.py
src/buvis/buvis/: adapter_response.py
src/buvis/buvis/adapters/: __init__.py
src/buvis/buvis/adapters/config/: config.py
src/buvis/buvis/adapters/console/: console.py
src/buvis/buvis/adapters/outlook_local/: outlook_local.py
src/buvis/buvis/adapters/poetry/: .poetry.py.swp  poetry.py
src/buvis/buvis/command/: command.py
src/buvis/buvis/domain/: __init__.py
src/buvis/buvis/domain/entity/project/: project.py  project_fixer.py
src/buvis/buvis/domain/entity/project/fixers/: __init__.py  migrate_loop_log.py  normalize_sections_order.py
src/buvis/buvis/domain/entity/zettel/: zettel.py  zettel_factory.py  zettel_fixer.py  zettel_formatter.py  zettel_parser.py  zettel_raw_data.py
src/buvis/buvis/domain/entity/zettel/fixers/: __init__.py  align_h1_to_title.py  fix_title_format.py  move_tag_to_tags.py  move_zkn_id_to_id.py  normalize_type.py  remove_duplicate_tags.py  (+8 more)
src/buvis/buvis/shared/: __init__.py
src/buvis/buvis/shared/filesystem/: file_metadata.py
src/buvis/buvis/shared/formatting/: strconv.py
src/buvis_scripts/: README.md  pyproject.toml
src/buvis_scripts/core/adapters/: __init__.py
src/buvis_scripts/core/adapters/config/: config.py
src/buvis_scripts/core/adapters/outlook_local/: outlook_local.py
src/buvis_scripts/core/command/: command.py
src/buvis_scripts/core/domain/entity/project/: project.py  project_fixer.py
src/buvis_scripts/core/domain/entity/zettel/: zettel.py  zettel_factory.py  zettel_fixer.py  zettel_formatter.py  zettel_parser.py
src/buvis_scripts/core/shared/: __init__.py
src/buvis_scripts/core/shared/formatting/: strconv.py
src/dot/: README.md  config.yaml  pyproject.toml
src/dot/dot/: __main__.py  cli.py  settings.py
src/dot/dot/commands/: __init__.py
src/dot/dot/commands/add/: add.py
src/dot/dot/commands/status/: status.py
src/fctracker/: Makefile  README.md  pyproject.toml
src/fctracker/adapters/: __init__.py
src/fctracker/adapters/config/: config.py
src/fctracker/adapters/transactions/: transactions_dir_scanner.py
src/fctracker/commands/balance/: balance.py
src/fctracker/commands/transactions/: transactions.py
src/fctracker/domain/: __init__.py  account.py  deposit.py  quantified_item.py  quantified_queue.py  transaction.py  withdrawal.py
src/fctracker/fctracker/: __main__.py  cli.py  settings.py
src/fctracker/fctracker/adapters/: __init__.py
src/fctracker/fctracker/adapters/config/: config.py
src/fctracker/fctracker/adapters/transactions/: transactions_dir_scanner.py  transactions_reader.py
src/fctracker/fctracker/commands/: __init__.py
src/fctracker/fctracker/commands/balance/: balance.py
src/fctracker/fctracker/commands/transactions/: transactions.py
src/fctracker/fctracker/domain/: __init__.py  account.py  deposit.py  quantified_item.py  quantified_queue.py  transaction.py  withdrawal.py
src/fctracker/tests/: account_test.py  conftest.py  deposit_test.py  queue_test.py  test_transaction.py
src/hello_world/: README.md  config.yaml  pyproject.toml
src/hello_world/hello_world/: __main__.py  cli.py  settings.py
src/hello_world/hello_world/commands/: __init__.py
src/hello_world/hello_world/commands/print_figlet/: print_figlet.py
src/hello_world/tests/: test_print_figlet.py
src/muc/: README.md  pyproject.toml
src/muc/muc/: __main__.py  cli.py  settings.py
src/muc/muc/commands/: __init__.py
src/muc/muc/commands/limit/: limit.py
src/muc/muc/commands/tidy/: tidy.py
src/muc/tests/: test_tidy.py
src/notes_linter/: README.md  pyproject.toml
src/notes_linter/notes_linter/: cli.py
src/notes_linter/notes_linter/commands/: __init__.py
src/notes_linter/notes_linter/commands/preview/: preview.py
src/outlookctl/: README.md  config.yaml  pyproject.toml
src/outlookctl/outlookctl/: __main__.py  cli.py  settings.py
src/outlookctl/outlookctl/commands/: __init__.py
src/outlookctl/outlookctl/commands/create_timeblock/: create_timeblock.py
src/pinger/: README.md  config.yaml  pyproject.toml
src/pinger/pinger/: __main__.py  cli.py  settings.py
src/pinger/pinger/commands/: __init__.py
src/pinger/pinger/commands/wait/: exceptions.py  wait.py
src/readerctl/: README.md  cli.py  pyproject.toml
src/readerctl/adapters/reader_api/: reader_api.py
src/readerctl/commands/add/: add.py
src/readerctl/commands/login/: login.py
src/readerctl/readerctl/: __main__.py  cli.py
src/readerctl/readerctl/adapters/: __init__.py  response.py
src/readerctl/readerctl/adapters/reader_api/: reader_api.py
src/readerctl/readerctl/commands/: __init__.py
src/readerctl/readerctl/commands/add/: __init__.py  add.py
src/readerctl/readerctl/commands/login/: __init__.py  login.py
src/readerctl/tests/: test_reader_api.py  test_response.py
src/scripts/: README.md  pyproject.toml
src/zseq/: README.md  app.py  pyproject.toml
src/zseq/commands/get_last/: get_last.py
src/zseq/shared/: zseq_filename.py
src/zseq/tests/: test_get_last.py  test_zseq_filename.py
src/zseq/zseq/: __main__.py  cli.py  settings.py
src/zseq/zseq/commands/: __init__.py
src/zseq/zseq/commands/get_last/: __init__.py  get_last.py
src/zseq/zseq/shared/: __init__.py  zseq_filename.py
(+47 files in other folders)
