[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Tomáš Bouška <tomas@buvis.net>"]
readme = "README.md"
package-mode = false
[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dependencies.buvis-pybase]
version = "0.1.5"
source = "test-pypi"

[tool.poetry.group.dev.dependencies]
click = "8.1.8"
pre-commit = "4.2.0"
pyfiglet = "1.0.2"
ping3 = "5.1.5"
ffmpeg-python = "0.2.0"

[tool.poetry.group.test.dependencies]
pytest = "8.4.1"

[tool.poetry.group.docs.dependencies]
sphinx = "8.2.3"
sphinx-rtd-theme = "3.0.2"

[tool.poetry.group.dev.dependencies.doogat-core]
version = "0.1.3"
source = "test-pypi"

[tool.poetry.group.dev.dependencies.doogat-integrations]
version = "0.1.0"
source = "test-pypi"
