[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scripts"
version = "0.1.1-alpha.4"
description = ""
authors = [ "Tomáš Bouška <tomas@buvis.net>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "fctracker"
from = "src"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"

[tool.poetry.dependencies.buvis-pybase]
version = "^0.2.0"
source = "test-pypi"

[tool.poetry.dependencies.doogat-core]
version = "^0.1.6-alpha.1"
source = "test-pypi"

[tool.poetry.dependencies.doogat-integrations]
version = "^0.1.1-alpha.4"
source = "test-pypi"

[tool.poetry.group.dev.dependencies]
click = "8.3.0"
pre-commit = "4.5.0"
pyfiglet = "1.0.4"
ping3 = "5.1.5"
ffmpeg-python = "0.2.0"

[tool.poetry.group.test.dependencies]
pytest = "9.0.1"

[tool.poetry.group.docs.dependencies]
sphinx = "8.2.3"
sphinx-rtd-theme = "3.0.2"
