[project]
name = "bim"
version = "0.1.0"
description = "BUVIS InfoMesh CLI"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.1",
  "buvis-pybase>=0.9.0",
  "doogat-core>=0.2.1",
  "doogat-integrations>=0.2.3",
]

[project.scripts]
bim = "bim.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
