[project]
name = "buvis-bim"
version = "0.1.0"
description = "BUVIS InfoMesh CLI"
authors = [{ name = "Tomas Bouska", email = "tomas@buvis.net" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = [
  "click>=8.3.1",
  "buvis-pybase>=0.9.0",
  "doogat-core>=0.2.1",
  "doogat-integrations>=0.2.3",
]

[project.urls]
Repository = "https://github.com/buvis/scripts"

[project.scripts]
bim = "bim.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["bim"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest>=9,<10", "pytest-mock>=3.15,<4", "pytest-cov>=7,<8", "mypy>=1.15,<2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true

[tool.coverage.run]
source = ["bim"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
