[tool.poetry]
name = "buvis-scripts-core"
version = "0.1.0"
description = ""
authors = ["Tomáš Bouška <tomas@buvis.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
rich = "^13.8.0"
tzlocal = "^5.2"
inflection = "^0.5.1"
# doogat-core = "^0.1.0"
# doogat-core = {version = "*", source = "test-pypi"}
# doogat-core = {path = "../../doogat/doogat-core", develop = true}
# buvis-pybase = "^0.1.0"
# buvis-pybase = {version = "*", source = "test-pypi"}
# buvis-pybase = {path = "../../../buvis-pybase", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
