[project]
name = "dot"
version = "0.1.0"
description = "Dotfiles manager"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.1",
  "pyfiglet>=1.0.4",
  "ffmpeg-python>=0.2.0",
  "buvis-pybase>=0.9.0",
]

[project.scripts]
dot = "dot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
