[project]
dependencies = ["click>=8.3.1", "buvis-pybase>=0.9.0"]
name = "fctracker"
version = "0.1.0"
description = "CLI tool to manage accounts in foreign currencies"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
[project.scripts]
fctracker = "fctracker.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
