[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Standard B.U.V.I.S script sample"
authors = ["Tomáš Bouška <tomas@buvis.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyfiglet = "1.0.4"
click = "8.3.0"

[build-system]
requires = ["poetry-core", "pynvim"]
build-backend = "poetry.core.masonry.api"
