[project]
name = "hello-world"
version = "0.1.0"
description = "Standard B.U.V.I.S script sample"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = ["click>=8.3.0", "pyfiglet>=1.0.4", "buvis-pybase>=0.3.1"]
[project.scripts]
hello-world = "hello_world.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
