[project]
name = "hello-world"
version = "0.1.0"
description = "Standard B.U.V.I.S script sample"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click==8.3.1", "pyfiglet==1.0.4", "buvis-pybase>=0.9.0"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
buvis-pybase = { index = "testpypi" }

[project.scripts]
hello-world = "hello_world.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
