[project]
name = "muc"
version = "0.1.0"
description = "Tools to manage music collection"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "click>=8.3.0",
  "pyfiglet>=1.0.4",
  "ffmpeg-python>=0.2.0",
  "buvis-pybase>=0.7.3",
]

[project.scripts]
muc = "muc.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
