[tool.poetry]
name = "notes-linter"
version = "0.1.0"
description = "Bob's notes linter"
authors = ["Tomáš Bouška <tomas@buvis.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
# doogat-core = "0.1.2"
doogat-core = {version = "0.1.3a4", source = "test-pypi"}
# doogat-core = {path = "../../../../doogat/doogat-core", develop = true}

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core", "pynvim"]
build-backend = "poetry.core.masonry.api"
