[project]
name = "outlookctl"
version = "0.1.0"
description = "CLI to Outlook"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.3.1", "buvis-pybase>=0.7.3"]

[project.scripts]
outlookctl = "outlookctl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
