[project]
name = "buvis-outlookctl"
version = "0.1.0"
description = "CLI to Outlook"
authors = [{ name = "Tomas Bouska", email = "tomas@buvis.net" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = ["click>=8.3.1", "buvis-pybase>=0.9.0"]

[project.urls]
Repository = "https://github.com/buvis/scripts"

[project.scripts]
outlookctl = "outlookctl.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["outlookctl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
