[project]
name = "pinger"
version = "0.1.0"
description = "Useful tools around ICMP ping"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.0", "ping3>=5.1.5", "buvis-pybase>=0.9.0"]

[project.scripts]
pinger = "pinger.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
