[project]
name = "readerctl"
version = "0.1.0"
description = "CLI tool to manage Reader from Readwise"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.3.0", "requests>=2.32.5", "buvis-pybase>=0.9.0"]

[project.scripts]
readerctl = "readerctl.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
