[project]
name = "buvis-scripts"
version = "0.2.0"
description = "Meta-package that installs all BUVIS CLI tools"
authors = [{ name = "Tomas Bouska", email = "tomas@buvis.net" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = [
  "buvis-bim==0.1.0",
  "buvis-dot==0.1.0",
  "buvis-fctracker==0.1.0",
  "buvis-hello-world==0.1.0",
  "buvis-muc==0.1.0",
  "buvis-outlookctl==0.1.0",
  "buvis-pinger==0.1.0",
  "buvis-readerctl==0.1.0",
  "buvis-zseq==0.1.0",
]

[project.urls]
Repository = "https://github.com/buvis/scripts"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
