[project]
name = "buvis-zseq"
version = "0.1.0"
description = "Utilities to work with zettelsequence"
authors = [{ name = "Tomas Bouska", email = "tomas@buvis.net" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = ["click>=8.3.1", "buvis-pybase>=0.9.0"]

[project.urls]
Repository = "https://github.com/buvis/scripts"

[project.scripts]
zseq = "zseq.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
