[project]
name = "zseq"
version = "0.1.0"
description = "Utilities to work with zettelsequence"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.1.0", "buvis-pybase>=0.9.0"]

[project.scripts]
zseq = "zseq.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
